compiler/tests/should-fail/TooFewArguments.via
/* IncorrectNumberOfArgumentsError */

process main {
    val x = Array[int](5);
    assert x == 0;
}
